<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cakacaka</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="buatBaru">Add New Student</string>
    <string name="nim">NIM</string>
    <string name="nama">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="simpan">Save</string>
    <string name="daftar">List of Students</string>
    <string name="update">Update Student</string>
    <string name="delete">Delete Student</string>
    <string name="edit">Update Student</string>
    <string name="random">Generate Groups</string>
    <string name="logoxslahs">splashlogo</string>
    <string name="logo">Logo</string>

</resources>
