<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/buatBaru"
        android:id="@+id/textViewBuat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:color/black"
        android:text="@string/nim"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBuatNim"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:color/black"
        android:text="@string/nama"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextBuatNama" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:color/black"
        android:text="@string/gender"
        android:id="@+id/textView4" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioBuatFemale" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioBuatMale" />
    </RadioGroup>

    <Button
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:id="@+id/buttonBuatSimpan" />

</LinearLayout>
